--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 server:
-  port: 80
+  port: 8002
 
 spring:
   application:
-    name: cloud-order-service
+    name: cloud-payment-service
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: org.gjt.mm.mysql.Driver
+    url: jdbc:mysql://47.100.252.237:3306/dyh?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: midea_f_d
 
 eureka:
   client:
@@ -19,3 +25,7 @@ eureka:
     #    lease-renewal-interval-in-seconds: 1
     #    Eureka服务端在收到最后一次心跳后等待时间上限，单位为秒(默认是90秒)，超时将剔除服务
     #    lease-expiration-duration-in-seconds: 2
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.dyh.springcloud.entities
